tests/semantic_cases/invalid/operator_div_requires_integer.ob0
(* INVALID: DIV requires INTEGER operands, but src is REAL *)
MODULE Main;
VAR src: REAL;
VAR x: INTEGER;
BEGIN
  x := src DIV 2
END Main.
